# irclog2html

./: .bzrignore  .coveragerc  .gitignore  .travis.yml  CHANGES.rst  CHANGES.txt  HACKING.rst  HACKING.txt  MANIFEST.in  Makefile  README.rst  README.txt  bootstrap.py  buildout.cfg  irclog.css  irclog2html.pl  irclog2html.py  irclogsearch.py  logs2html.py  search.py  setup.cfg  setup.py  test.py  test_irclog2html.py  tox.ini  xchatlogsplit.py
.github/workflows/: build.yml
porting/: HISTORY.txt  irclog2html.pl  irclog2html.py  test.py
src/irclog2html/: __main__.py  _version.py  irclog.css  irclog2html.py  irclogsearch.py  irclogserver.py  logs2html.py  xchatlogsplit.py
src/irclog2html/tests/: sample.cfg  test_irclog2html.py  test_irclogsearch.py  test_irclogserver.py  test_logs2html.py  test_main.py
testcases/: 2011-01-16-hybrid-charset.log.html
