[bdist_wheel]
universal = 1

[metadata]
license_file = COPYING

[flake8]
doctests = yes
extend-ignore = E261,E501
# E261: at least two spaces before inline comment
# E501: line too long

[zest.releaser]
python-file-with-version = src/irclog2html/_version.py

[pytest]
norecursedirs = .* *.egg-info parts eggs develop-eggs bin dist tmp build temp python porting
python_functions = !test_suite
addopts = --doctest-modules --ignore=bootstrap.py --ignore=setup.py
doctest_optionflags = NORMALIZE_WHITESPACE ELLIPSIS
